refactor(WinningResult): 반환 타입 변경